--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,9 @@ Django==1.3.1
 #gunicorn==0.13.4
 django-sentry==1.13.5
 httplib2==0.7.1
+celery==2.4.1
+django-celery==2.4.1
+django-kombu==0.9.4
 MySQL-python==1.2.3
-#git+ssh://git@ny/django-oauth.git#egg=django-oauth
-#git+ssh://git@ny/django-mock-server.git#egg=django-mock-server
-#git+ssh://git@ny/django-rest-framework.git#egg=djangorestframework
+git+ssh://git@ny/django-rest-framework.git#egg=djangorestframework
   
