--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@ Django==1.3.1
 #wsgiref==0.1.2
 #gunicorn==0.13.4
 django-sentry==1.13.5
-httplib2==0.7.1
-celery==2.4.1
-django-celery==2.4.1
+#raven==1.4.3
+#sentry==2.9.0
+httplib2==0.7.2
+celery==2.4.6
+django-celery==2.4.2
 django-kombu==0.9.4
 MySQL-python==1.2.3
-git+ssh://git@ny/django-rest-framework.git#egg=djangorestframework
+git+ssh://user1@222.73.86.185/home/user1/repo/django-rest-framework.git#egg=djangorestframework
   
