--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,6 @@ django-kombu==0.9.4
 MySQL-python==1.2.3
 lxml==2.3
 git+ssh://git@ny/django-chartit.git#egg=django-chartit
-djangorestframework==0.2.3
+git+ssh://git@ny/django-rest-framework.git#egg=djangorestframework
 
   
