--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,9 @@ django-celery==2.4.2
 django-kombu==0.9.4
 MySQL-python==1.2.3
 lxml==2.3
+git+ssh://git@ny/mechanize.git
 git+ssh://git@ny/django-chartit.git#egg=django-chartit
 git+ssh://git@ny/django-rest-framework.git#egg=djangorestframework
+
 
   
