--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,9 @@ django-celery==2.4.2
 django-kombu==0.9.4
 MySQL-python==1.2.3
 lxml==2.3
-#pyExcelerator
+pyExcelerator
 #geraldo
-#reportlab==2.5
+reportlab==2.5
 git+ssh://git@ny/django-chartit.git#egg=django-chartit
 git+ssh://git@ny/django-rest-framework.git#egg=djangorestframework
 
