redesign report form

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,12 @@ lxml==2.3
 pyExcelerator
 #geraldo
 reportlab==2.5
+
+line_profiler
+guppy
+
 git+ssh://git@ny/django-chartit.git#egg=django-chartit
 git+ssh://git@ny/django-rest-framework.git#egg=djangorestframework
-
+pip install git+git://github.com/dcramer/django-devserver#egg=django-devserver
 
   
