--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ httplib2==0.7.2
 celery==2.4.6
 django-celery==2.4.2
 django-kombu==0.9.4
-MySQL-python==1.2.3
+#MySQL-python==1.2.3
 lxml==2.3
 pyExcelerator
 python-memcached==1.45
