--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,24 @@
-Django==1.3.1
+#Django==1.3.1
 #wsgiref==0.1.2
-gunicorn==0.13.4
-raven==1.4.3
-sentry==2.9.0
-django-sentry==1.13.5
+#gunicorn==0.13.4
+#raven==1.4.3
+#sentry==2.9.0
+#django-sentry==1.13.5
+#celery==2.4.6
+#django-celery==2.4.2
 httplib2==0.7.2
-celery==2.4.6
-django-celery==2.4.2
 django-kombu==0.9.4
-#MySQL-python==1.2.3
 lxml==2.3
 pyExcelerator
 python-memcached==1.45
+djangorestframework
 #geraldo
 reportlab==2.5
 
 #line_profiler
 #guppy
 
-git+ssh://git@ny/django-chartit.git#egg=django-chartit
-git+ssh://git@ny/django-rest-framework.git#egg=djangorestframework
+git+file:///home/user1/repo/django-chartit.git#egg=django-chartit
 #git+git://github.com/dcramer/django-devserver#egg=django-devserver
 
   
