--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,11 @@
 #django-celery==2.4.2
 httplib2==0.7.2
 django-kombu==0.9.4
-lxml==2.3
 pyExcelerator
 python-memcached==1.45
 djangorestframework
 #geraldo
-reportlab==2.5
+#reportlab==2.5
 
 #line_profiler
 #guppy
