--- a/requirements_production.txt
+++ b/requirements_production.txt
@@ -9,6 +9,7 @@ celery==2.4.6
 django-celery==2.4.2
 django-kombu==0.9.4
 python-memcached==1.45
+#lxml==2.3
 git+file:///home/user1/repo/django-chartit.git#egg=django-chartit
 git+file:///home/user1/repo/django-rest-framework.git#egg=djangorestframework
 
