--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-#Django==1.3.1
+Django==1.3.1
 #wsgiref==0.1.2
-#gunicorn==0.13.4
-#raven==1.4.3
+gunicorn==0.13.4
+raven==1.4.3
 #sentry==2.9.0
 #django-sentry==1.13.5
 #celery==2.4.6
