--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
+MySQL-python==1.2.3
 django==1.3.1
 #wsgiref==0.1.2
 gunicorn==0.13.4
 raven==1.4.3
-#sentry==2.9.0
-#django-sentry==1.13.5
-#celery==2.4.6
-#django-celery==2.4.2
+sentry==2.9.0
+django-sentry==1.13.5
+celery==2.4.6
+django-celery==2.4.2
 httplib2==0.7.2
 django-kombu==0.9.4
 pyExcelerator
 python-memcached==1.45
-djangorestframework
-MySQL-python==1.2.3
+djangorestframework==0.2.3
 #geraldo
 #reportlab==2.5
 
