--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 MySQL-python==1.2.3
 Django==1.3.1
-#wsgiref==0.1.2
+PIL==1.1.7
+lxml==2.3
 gunicorn==0.13.4
 raven==1.4.3
 sentry==2.9.0
@@ -14,7 +15,8 @@ python-memcached==1.45
 djangorestframework==0.2.3
 #geraldo
 #reportlab==2.5
-
+#wsgiref==0.1.2
+#######dev server#######
 #line_profiler
 #guppy
 
@@ -24,7 +26,4 @@ git+file:///home/user1/repo/django-chartit.git#egg=django-chartit
   
 ##########extra package##########
 #python-mysqldb
-#PIL
-#lxml
 #virtualenv==1.4.9
-#South
