--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 MySQL-python==1.2.3
 Django==1.3.1
-PIL==1.1.7
-lxml==2.3
 gunicorn==0.13.4
 raven==1.4.3
 sentry==2.9.0
@@ -27,3 +25,5 @@ git+file:///home/user1/repo/django-chartit.git#egg=django-chartit
 ##########extra package##########
 #python-mysqldb
 #virtualenv==1.4.9
+#lxml==2.3
+#PIL==1.1.7
