--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
 MySQL-python==1.2.3
 Django==1.3.3
 gunicorn==0.13.4
-raven==2.0.6
-sentry==2.9.0
 django-sentry==1.13.5
 celery==2.4.6
 django-celery==2.4.2
@@ -29,3 +27,5 @@ git+file:///home/user1/repo/django-chartit.git#egg=django-chartit
 #virtualenv==1.8.2
 #lxml==2.3
 #PIL==1.1.7
+#raven==2.0.6
+#sentry==2.9.0
