--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 MySQL-python==1.2.3
-Django==1.3.3
-gunicorn==0.13.4
-django-sentry==1.13.5
-celery==2.4.6
-django-celery==2.4.2
+Django==1.4.1
+gunicorn==0.14.6
+raven==2.0.6
+celery==2.5.5
+django-celery==2.5.5
 httplib2==0.7.2
 django-kombu==0.9.4
 pyExcelerator
@@ -18,7 +18,7 @@ djangorestframework==0.3.0
 #guppy
 
 git+file:///home/user1/repo/django-chartit.git#egg=django-chartit
-#git+shh://user1@222.73.86.185:repo/django-rest-framework.git#egg=djangorestframework
+#git+shh://user1@222.73.86.185/repo/django-rest-framework.git#egg=djangorestframework
 #git+git://github.com/dcramer/django-devserver#egg=django-devserver
 
   
@@ -28,5 +28,5 @@ git+file:///home/user1/repo/django-chartit.git#egg=django-chartit
 #virtualenv==1.8.2
 #lxml==2.3
 #PIL==1.1.7
-#raven==2.0.6
-#sentry==2.9.0
+#sentry==4.8.1
+#celery==2.5.5
