--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,8 @@ MySQL-python==1.2.3
 Django==1.4.1
 gunicorn==0.14.6
 raven==2.0.6
-celery==2.5.5
-django-celery==2.5.5
 httplib2==0.7.2
+kombu 2.4.7
 django-kombu==0.9.4
 pyExcelerator
 python-memcached==1.45
@@ -24,9 +23,9 @@ git+file:///home/user1/repo/django-chartit.git#egg=django-chartit
   
 ##########extra package(not install in the virtualenv)##########
 #sudo apt-get install python-mysqldb
-#sudo pip instal sentry==2.9.0
 #virtualenv==1.8.2
 #lxml==2.3
 #PIL==1.1.7
 #sentry==4.8.1
 #celery==2.5.5
+#django-celery==2.5.5
