--- a/requirements_production.txt
+++ b/requirements_production.txt
@@ -1,18 +1,16 @@
 #sudo easy_install -U distribute
-Django==1.3.1
-wsgiref==0.1.2
-gunicorn==0.13.4
-raven==1.4.3
-sentry==2.9.0
-django-sentry==1.13.5
+MySQL-python==1.2.3
+Django==1.4.1
+gunicorn==0.14.6
+raven==2.0.6
 httplib2==0.7.2
-celery==2.4.6
-django-celery==2.4.2
+kombu 2.4.7
 django-kombu==0.9.4
+pyExcelerator
 python-memcached==1.45
-#lxml==2.3
+djangorestframework==0.3.0
 git+file:///home/user1/repo/django-chartit.git#egg=django-chartit
-git+file:///home/user1/repo/django-rest-framework.git#egg=djangorestframework
+#git+file:///home/user1/repo/django-rest-framework.git#egg=djangorestframework
 
 
   
