--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
 MySQL-python==1.2.3
 Django==1.4.1
 gunicorn==0.14.6
-raven==2.0.6
 httplib2==0.7.2
 django-kombu==0.9.4
-pyExcelerator
 python-memcached==1.45
 djangorestframework==0.3.0
 
@@ -25,7 +23,9 @@ git+file:///home/user1/repo/django-chartit.git#egg=django-chartit
 #virtualenv==1.8.2
 #lxml==2.3
 #PIL==1.1.7
+#raven==2.0.6
 #sentry==4.8.1
 #celery==2.5.5
 #django-celery==2.5.5
 #kombu==2.4.7
+#pyExcelerator=0.6.4.1
