--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ MySQL-python==1.2.3
 Django==1.4.1
 gunicorn==0.14.6
 httplib2==0.7.2
+celery==2.5.5
+django-celery==2.5.5
 django-kombu==0.9.4
 python-memcached==1.45
 djangorestframework==0.3.0
