--- a/requirements_production.txt
+++ b/requirements_production.txt
@@ -1,7 +1,9 @@
 #sudo easy_install -U distribute
 MySQL-python==1.2.3
-Django==1.4.1
+Django==1.3.3
 gunicorn==0.14.6
+celery==2.5.5
+django-celery==2.5.5
 raven==2.0.6
 httplib2==0.7.2
 django-kombu==0.9.4
