--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,13 @@ MySQL-python==1.2.3
 Django==1.4.1
 gunicorn==0.14.6
 httplib2==0.7.2
+raven==2.0.6
 celery==2.5.5
 django-celery==2.5.5
 django-kombu==0.9.4
 python-memcached==1.45
 djangorestframework==0.3.0
+
 
 #geraldo
 #reportlab==2.5
@@ -30,4 +32,4 @@ git+file:///home/user1/repo/django-chartit.git#egg=django-chartit
 #celery==2.5.5
 #django-celery==2.5.5
 #kombu==2.4.7
-#pyExcelerator=0.6.4.1
+#pyExcelerator==0.6.4.1
