--- a/shopmanager/fixtures/initial_reason.json
+++ b/shopmanager/fixtures/initial_reason.json
@@ -70,5 +70,23 @@
       "reason_text": "\u8ba2\u5355\u6709\u6539\u52a8",
       "created": "2012-10-23 15:04:31"
     }
+  },
+  {
+    "pk": 9,
+    "model": "monitor.reason",
+    "fields": {
+      "priority": 0,
+      "reason_text": "\u5b50\u8ba2\u5355\u53d1\u8d27\u5931\u8d25\uff0c\u8bf7\u68c0\u67e5\u5b50\u8ba2\u5355\u662f\u5426\u9000\u6b3e,(\u5982\u9000\u6b3e\u62c6\u5305\u8bf7\u4fdd\u7559\u7236\u8ba2\u5355\u7269\u6d41\u5355)",
+      "created": "2012-10-24 15:11:05"
+    }
+  },
+  {
+    "pk": 10,
+    "model": "monitor.reason",
+    "fields": {
+      "priority": 0,
+      "reason_text": "\u7ec4\u5408\u5546\u54c1\u62c6\u5206\u51fa\u9519 ",
+      "created": "2012-10-29 12:04:03"
+    }
   }
 ]
