--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ djangorestframework==0.3.0
 #line_profiler
 #guppy
 
-git+file:///home/user1/repo/django-chartit.git#egg=django-chartit
+git+ssh://git@192.168.1.101/django-chartit.git#egg=django-chartit
 #git+shh://user1@222.73.86.185/repo/django-rest-framework.git#egg=djangorestframework
 #git+git://github.com/dcramer/django-devserver#egg=django-devserver
 
