fix orders trade and users tasks

--- a/shopmanager/fixtures/initial_reason.json
+++ b/shopmanager/fixtures/initial_reason.json
@@ -5,7 +5,7 @@
     "fields": {
       "priority": 0,
       "reason_text": "\u65b0\u7559\u8a00",
-      "created": "2012-10-23 15:02:32"
+      "created": "2012-10-23T15:02:32"
     }
   },
   {
@@ -14,7 +14,7 @@
     "fields": {
       "priority": 0,
       "reason_text": "\u65b0\u9000\u6b3e",
-      "created": "2012-10-23 15:02:48"
+      "created": "2012-10-23T15:02:48"
     }
   },
   {
@@ -23,7 +23,7 @@
     "fields": {
       "priority": 0,
       "reason_text": "\u65b0\u5408\u5355",
-      "created": "2012-10-23 15:03:05"
+      "created": "2012-10-23T15:03:05"
     }
   },
   {
@@ -32,7 +32,7 @@
     "fields": {
       "priority": 0,
       "reason_text": "\u7533\u8bf7\u9000\u6b3e\u4e2d",
-      "created": "2012-10-23 15:03:21"
+      "created": "2012-10-23T15:03:21"
     }
   },
   {
@@ -41,7 +41,7 @@
     "fields": {
       "priority": 0,
       "reason_text": "\u6709\u89c4\u5219\u5339\u914d",
-      "created": "2012-10-23 15:03:38"
+      "created": "2012-10-23T15:03:38"
     }
   },
   {
@@ -50,7 +50,7 @@
     "fields": {
       "priority": 0,
       "reason_text": "\u8ba2\u5355\u7f3a\u8d27",
-      "created": "2012-10-23 15:03:55"
+      "created": "2012-10-23T15:03:55"
     }
   },
   {
@@ -59,7 +59,7 @@
     "fields": {
       "priority": 0,
       "reason_text": "\u8ba2\u5355\u975e\u6b63\u5e38\u7ed3\u675f",
-      "created": "2012-10-23 15:04:19"
+      "created": "2012-10-23T15:04:19"
     }
   },
   {
@@ -67,8 +67,8 @@
     "model": "monitor.reason",
     "fields": {
       "priority": 0,
-      "reason_text": "\u8ba2\u5355\u6709\u6539\u52a8",
-      "created": "2012-10-23 15:04:31"
+      "reason_text": "\u8ba2\u5355\u53d1\u8d27\u5931\u8d25",
+      "created": "2012-12-01T13:12:23"
     }
   },
   {
@@ -77,7 +77,7 @@
     "fields": {
       "priority": 0,
       "reason_text": "\u5b50\u8ba2\u5355\u53d1\u8d27\u5931\u8d25\uff0c\u8bf7\u68c0\u67e5\u5b50\u8ba2\u5355\u662f\u5426\u9000\u6b3e,(\u5982\u9000\u6b3e\u62c6\u5305\u8bf7\u4fdd\u7559\u7236\u8ba2\u5355\u7269\u6d41\u5355)",
-      "created": "2012-10-24 15:11:05"
+      "created": "2012-10-24T15:11:05"
     }
   },
   {
@@ -86,7 +86,43 @@
     "fields": {
       "priority": 0,
       "reason_text": "\u7ec4\u5408\u5546\u54c1\u62c6\u5206\u51fa\u9519 ",
-      "created": "2012-10-29 12:04:03"
+      "created": "2012-10-29T12:04:03"
+    }
+  },
+  {
+    "pk": 11,
+    "model": "monitor.reason",
+    "fields": {
+      "priority": 0,
+      "reason_text": "\u4e70\u5bb6\u6709\u591a\u5355\u7b49\u5f85\u5408\u5e76",
+      "created": "2012-11-08T17:26:57"
+    }
+  },
+  {
+    "pk": 12,
+    "model": "monitor.reason",
+    "fields": {
+      "priority": 0,
+      "reason_text": "\u8ba2\u5355\u4fee\u6539\u5730\u5740",
+      "created": "2012-12-25T11:44:31"
+    }
+  },
+  {
+    "pk": 13,
+    "model": "monitor.reason",
+    "fields": {
+      "priority": 0,
+      "reason_text": "\u91d1\u989d\u89c4\u5219\u6267\u884c\u51fa\u9519",
+      "created": "2012-12-25T11:45:09"
+    }
+  },
+  {
+    "pk": 14,
+    "model": "monitor.reason",
+    "fields": {
+      "priority": 0,
+      "reason_text": "\u5408\u5355\u51fa\u9519",
+      "created": "2012-12-25T11:45:22"
     }
   }
 ]
