--- a/requirements_production.txt
+++ b/requirements_production.txt
@@ -1,16 +1,38 @@
-#sudo easy_install -U distribute
 MySQL-python==1.2.3
-Django==1.3.3
+Django==1.4.1
 gunicorn==0.14.6
+httplib2==0.7.2
+raven==2.0.6
 celery==3.0.10
 django-celery==3.0.10
-raven==2.0.6
-httplib2==0.7.2
 django-kombu==0.9.4
 python-memcached==1.45
 djangorestframework==0.3.0
-git+file:///home/user1/repo/django-chartit.git#egg=django-chartit
-#git+file:///home/user1/repo/django-rest-framework.git#egg=djangorestframework
+
+
+#geraldo
+#reportlab==2.5
+#wsgiref==0.1.2
+#######dev server#######
+#line_profiler
+#guppy
+
+git+ssh://git@192.168.1.101/django-chartit.git#egg=django-chartit
+#git+shh://user1@222.73.86.185/repo/django-rest-framework.git#egg=djangorestframework
+#git+git://github.com/dcramer/django-devserver#egg=django-devserver
+
+  
+##########extra package(not install in the virtualenv)##########
+#sudo apt-get install python-mysqldb
+#virtualenv==1.8.2
+#lxml==2.3
+#PIL==1.1.7
+#raven==2.0.6
+#sentry==4.8.1
+#celery==3.0.10
+#django-celery==3.0.10
+#kombu==2.4.7
+#pyExcelerator==0.6.4.1
 
 
   
