--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ django-celery==3.0.17
 django-kombu==0.9.4
 python-memcached==1.45
 djangorestframework==0.3.0
-
+django-bitfield==1.6.4
 
 #geraldo
 #reportlab==2.5
