fix celerybeat and trade models and task_settings

--- a/config/celerybeat.conf
+++ b/config/celerybeat.conf
@@ -3,8 +3,8 @@
 ; ===========================================
 
 [program:celerybeat]
-command=/home/user1/deploy/taobao/taobao-v2.7-76-g67ed328/ve/bin/python manage.py celery beat --schedule=/var/lib/celery/celerybeat-schedule --loglevel=INFO
-
+command=/home/user1/deploy/taobao/taobao-v2.7-76-g67ed328/ve/bin/python manage.py celery beat  --loglevel=INFO
+#--schedule=/var/lib/celery/celerybeat-schedule
 directory=/home/user1/deploy/taobao/taobao-v2.7-76-g67ed328/shopmanager/
 
 user=root
