change supervisord conf log file to none

--- a/config/celerybeat.conf
+++ b/config/celerybeat.conf
@@ -1,5 +1,5 @@
 ; ===========================================
-;  celery beat supervisor example for Django
+; supervisor example for celery beat
 ; ===========================================
 
 [program:celerybeat]
@@ -9,7 +9,7 @@ directory=/home/user1/deploy/taobao/taobao-v2.7-76-g67ed328/shopmanager/
 
 user=root
 numprocs=1
-stdout_logfile=/var/log/celerybeat.log
+stdout_logfile=NONE
 stderr_logfile=/var/log/celerybeat.log
 autostart=true
 autorestart=true
