--- a/config/celeryd.conf
+++ b/config/celeryd.conf
@@ -1,5 +1,5 @@
 ; ==============================================
-;  celery worker supervisor example for Django
+; supervisor example for celery worker
 ; ==============================================
 
 [program:celery]
@@ -9,7 +9,7 @@ directory=/home/user1/deploy/taobao/taobao-v2.7-76-g67ed328/shopmanager/
 
 user=root
 numprocs=1
-stdout_logfile=/var/log/celeryd.log
+stdout_logfile=NONE
 stderr_logfile=/var/log/celeryd.log
 autostart=true
 autorestart=true
