--- a/config/notifyreceiver.conf
+++ b/config/notifyreceiver.conf
@@ -1,5 +1,5 @@
 ; ==============================================
-;  top notify receiver supervisor example for Django
+; supervisor example for top notify receiver
 ; ==============================================
 
 [program:notifyreceiver]
@@ -9,7 +9,7 @@ directory=/home/user1/deploy/taobao/taobao-v2.7-76-g67ed328/shopmanager/
 
 user = root
 numprocs=1
-stdout_logfile=/var/log/notify.log
+stdout_logfile=NONE
 stderr_logfile=/var/log/notify.log
 autostart=true
 autorestart=true
