--- a/requirements_production.txt
+++ b/requirements_production.txt
@@ -1,4 +1,4 @@
-MySQL-python==1.2.3
+#MySQL-python==1.2.3
 Django==1.4.1
 gunicorn==0.14.6
 httplib2==0.7.2
@@ -17,7 +17,7 @@ django-bitfield==1.6.4
 #line_profiler
 #guppy
 
-git+ssh://git@192.168.1.101/django-chartit.git#egg=django-chartit
+git+ssh://user1@qiyue.f3322.org/home/user1/repo/django-chartit.git#egg=django-chartit
 #git+shh://user1@222.73.86.185/repo/django-rest-framework.git#egg=djangorestframework
 #git+git://github.com/dcramer/django-devserver#egg=django-devserver
 
@@ -25,14 +25,14 @@ git+ssh://git@192.168.1.101/django-chartit.git#egg=django-chartit
 ##########extra package(not install in the virtualenv)##########
 #sudo apt-get install python-mysqldb
 #virtualenv==1.8.2
-#lxml==2.3
-#PIL==1.1.7
+lxml==2.3
+PIL==1.1.7
 #raven==2.0.6
 #sentry==4.8.1
 #celery==3.0.10
 #django-celery==3.0.10
 #kombu==2.4.7
-#pyExcelerator==0.6.4.1
+pyExcelerator==0.6.4.1
 
 
   
