--- a/requirements_production.txt
+++ b/requirements_production.txt
@@ -1,4 +1,4 @@
-#MySQL-python==1.2.3
+MySQL-python==1.2.3
 Django==1.4.1
 gunicorn==0.14.6
 httplib2==0.7.2
@@ -9,6 +9,7 @@ django-kombu==0.9.4
 python-memcached==1.45
 djangorestframework==0.3.0
 django-bitfield==1.6.4
+
 
 #geraldo
 #reportlab==2.5
