\gunicorn add gevent

--- a/config/gunicorn.conf
+++ b/config/gunicorn.conf
@@ -2,7 +2,7 @@
 ; supervisor example for gunicorn server
 ; ==============================================
 [program:gunicorn]
-command = /home/user1/deploy/taobao/taobao-v2.7-76-g67ed328/ve/bin/gunicorn_django  -c taobao_gunicorn_conf.py
+command = /home/user1/deploy/taobao/taobao-v2.7-76-g67ed328/ve/bin/gunicorn_django -k gevent -c taobao_gunicorn_conf.py
 
 directory = /home/user1/deploy/taobao/taobao-v2.7-76-g67ed328/shopmanager/
 
