--- a/config/gunicorn.conf
+++ b/config/gunicorn.conf
@@ -2,9 +2,9 @@
 ; supervisor example for gunicorn server
 ; ==============================================
 [program:gunicorn]
-command = /home/user1/deploy/taobao/taobao-v2.7-76-g67ed328/ve/bin/gunicorn_django  -c taobao_gunicorn_conf.py
+command = /var/www/deploy/taobao/taobao-backend/ve/bin/gunicorn_django  -c taobao_gunicorn_conf.py
 
-directory = /home/user1/deploy/taobao/taobao-v2.7-76-g67ed328/shopmanager/
+directory = /var/www/deploy/taobao/taobao-backend/shopmanager/
 
 user = root
 numprocs=1
