--- a/config/tmcnotify.conf
+++ b/config/tmcnotify.conf
@@ -2,9 +2,9 @@
 ; supervisor example for gunicorn server
 ; ==============================================
 [program:tmcnotify]
-command = /home/user1/deploy/taobao/taobao-v2.7-76-g67ed328/ve/bin/python tmcnotify_receiver.py default
+command = /var/www/deploy/taobao/taobao-backend/ve/bin/python tmcnotify_receiver.py default
 
-directory = /home/user1/deploy/taobao/taobao-v2.7-76-g67ed328/shopmanager/
+directory = /var/www/deploy/taobao/taobao-backend/shopmanager/
 
 user = root
 numprocs=1
