--- a/config/celerybeat.conf
+++ b/config/celerybeat.conf
@@ -3,9 +3,9 @@
 ; ===========================================
 
 [program:celerybeat]
-command=/home/user1/deploy/taobao/taobao-v2.7-76-g67ed328/ve/bin/python manage.py celery beat  --loglevel=INFO
+command=/var/www/deploy/taobao/taobao-backend/ve/bin/python manage.py celery beat  --loglevel=INFO
 #--schedule=/var/lib/celery/celerybeat-schedule
-directory=/home/user1/deploy/taobao/taobao-v2.7-76-g67ed328/shopmanager/
+directory=/var/www/deploy/taobao/taobao-backend/shopmanager/
 
 user=root
 numprocs=1
