--- a/config/celeryd.conf
+++ b/config/celeryd.conf
@@ -3,9 +3,9 @@
 ; ==============================================
 
 [program:celery]
-command=/home/user1/deploy/taobao/taobao-v2.7-76-g67ed328/ve/bin/python manage.py celery worker --loglevel=INFO
+command=/var/www/deploy/taobao/taobao-backend/ve/bin/python manage.py celery worker --loglevel=INFO
 
-directory=/home/user1/deploy/taobao/taobao-v2.7-76-g67ed328/shopmanager/
+directory=/var/www/deploy/taobao/taobao-backend/shopmanager/
 
 user=root
 numprocs=1
