--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,14 @@ djangorestframework==0.3.0
 django-bitfield==1.6.4
 gevent==1.0.1
 
+Pillow>=2.0.0
+coverage==3.5
+html5lib==0.90
+httplib2==0.9
+nose==1.3.1
+pyPdf2==1.19
+reportlab==2.5
+
 #geraldo
 #reportlab==2.5
 #wsgiref==0.1.2
@@ -18,7 +26,7 @@ gevent==1.0.1
 #line_profiler
 #guppy
 
-git+ssh://git@192.168.1.101/django-chartit.git#egg=django-chartit
+#git+ssh://git@192.168.1.101/django-chartit.git#egg=django-chartit
 #git+shh://user1@222.73.86.185/repo/django-rest-framework.git#egg=djangorestframework
 #git+git://github.com/dcramer/django-devserver#egg=django-devserver
 
