--- a/requirements_production.txt
+++ b/requirements_production.txt
@@ -17,6 +17,15 @@ six==1.6.1
 greenlet==0.4.3
 gevent==1.0.1
 
+Pillow>=2.0.0
+coverage==3.5
+html5lib==0.90
+httplib2==0.9
+nose==1.3.1
+pyPdf2==1.19
+reportlab==2.5
+xhtml2pdf==0.0.6
+
 #geraldo
 #reportlab==2.5
 #wsgiref==0.1.2
