fix flashsale supplier

--- a/requirements_production.txt
+++ b/requirements_production.txt
@@ -7,6 +7,7 @@ celery==3.0.19
 django-filter==0.9.1
 django-celery==3.0.17
 django-kombu==0.9.4
+django-mathfilters==0.3.0
 python-memcached==1.53
 djangorestframework==3.0.0
 #bitfield depend on nose
