--- a/config/celeryd.conf
+++ b/config/celeryd.conf
@@ -3,7 +3,7 @@
 ; ==============================================
 
 [program:celery]
-command=/var/www/deploy/taobao/taobao-backend/ve/bin/python manage.py celery worker --loglevel=INFO
+command=/var/www/deploy/taobao/taobao-backend/ve/bin/python manage.py celery worker --loglevel=ERROR
 
 directory=/var/www/deploy/taobao/taobao-backend/shopmanager/
 
