--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,29 @@
 MySQL-python==1.2.3
-Django==1.4.1
+Django==1.4.11
 gunicorn==0.14.6
+httplib2==0.9
 raven==2.0.6
 celery==3.0.19
+django-filter==0.9.1
 django-celery==3.0.17
 django-kombu==0.9.4
-python-memcached==1.45
+django-mathfilters==0.3.0
+python-memcached==1.53
 djangorestframework==3.0.0
+#bitfield depend on nose
+nose==1.3.1
 django-bitfield==1.6.4
+BeautifulSoup==3.2.1
+#jsonfield depend on six
+six==1.6.1
+jsonfield==0.9.20
+greenlet==0.4.3
 gevent==1.0.1
 
 Pillow>=2.0.0
 coverage==3.5
 html5lib==0.90
-httplib2==0.9
-nose==1.3.1
+#nose==1.3.1
 pyPdf2==1.19
 reportlab==2.5
 
@@ -25,9 +34,9 @@ reportlab==2.5
 #line_profiler
 #guppy
 
-#git+ssh://git@192.168.1.101/django-chartit.git#egg=django-chartit
+#git+ssh://user1@qiyue.huyi.so/home/user1/repo/xhtml2pdf.git#egg=xhtml2pdf
+#git+ssh://user1@qiyue.huyi.so/home/user1/repo/django-chartit.git#egg=django-chartit
 #git+shh://user1@222.73.86.185/repo/django-rest-framework.git#egg=djangorestframework
-#git+git://github.com/dcramer/django-devserver#egg=django-devserver
 
   
 ##########extra package(not install in the virtualenv)##########
@@ -35,9 +44,13 @@ reportlab==2.5
 #virtualenv==1.8.2
 #lxml==2.3
 #PIL==1.1.7
+#South==1.0
 #raven==2.0.6
 #sentry==4.8.1
 #celery==3.0.10
 #django-celery==3.0.10
 #kombu==2.4.7
-#pyExcelerator==0.6.4.1
+pyExcelerator==0.6.4.1
+
+
+ 
