--- a/requirements_production.txt
+++ b/requirements_production.txt
@@ -26,7 +26,6 @@ html5lib==0.90
 #nose==1.3.1
 pyPdf2==1.19
 reportlab==2.5
-xhtml2pdf==0.0.6
 
 #geraldo
 #reportlab==2.5
@@ -35,9 +34,9 @@ xhtml2pdf==0.0.6
 #line_profiler
 #guppy
 
+#git+ssh://user1@qiyue.huyi.so/home/user1/repo/xhtml2pdf.git#egg=xhtml2pdf
 #git+ssh://user1@qiyue.huyi.so/home/user1/repo/django-chartit.git#egg=django-chartit
 #git+shh://user1@222.73.86.185/repo/django-rest-framework.git#egg=djangorestframework
-#git+git://github.com/dcramer/django-devserver#egg=django-devserver
 
   
 ##########extra package(not install in the virtualenv)##########
